<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ushannlabs.doc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ushannlabs.doc.ui.bacofficiel.BacOfficielFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_bacofficiel" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ushannlabs.doc.ui.orientation.OrientationFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.ushannlabs.doc.ui.devoir.DevoirsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ushannlabs.doc.ui.apropos.AproposFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.ushannlabs.doc.ui.bacblanc.BacBlancFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>